# daimon

./: .coverage  .env.example  .gitignore  .noesis.pid  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEMO_CHECKLIST.md  LICENSE  README.md  README_ORIGINAL_MAXIMUS.md  SECURITY.md  SOUL_CONFIGURATION.md  cli_tester.py  coverage.xml  daimon_daemon.py  debug_imports.py  docker-compose.yml  generation_log.txt  install.sh  noesis  pyproject.toml  run_backend.py  start_backend.sh
backend/services/api_gateway/: Dockerfile  README.md  pyproject.toml
backend/services/api_gateway/tests/: test_api.py  test_proxy.py
backend/services/episodic_memory/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/services/episodic_memory/tests/: test_api.py  test_consolidation.py  test_context.py  test_decay.py  test_memory_store.py
backend/services/hcl_analyzer_service/: .env.example  Dockerfile.old  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.old
backend/services/hcl_analyzer_service/scripts/: dependency-audit.sh
backend/services/hcl_analyzer_service/tests/: __init__.py  test_analyzer.py  test_api.py  test_coverage_extras.py  test_hybrid_detector.py  test_integration.py  test_ml_analyzer.py
backend/services/hcl_monitor_service/: .dockerignore  .env.example  Dockerfile.backup_track2_remaining  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt.old  requirements_backup.txt
backend/services/hcl_monitor_service/shared/: constitutional_logging.py  constitutional_metrics.py  constitutional_tracing.py  health_checks.py  metrics_exporter.py
backend/services/hcl_monitor_service/tests/: __init__.py  test_api.py  test_collector.py
backend/services/maximus_core_service/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  100_PERCENT_TEST_SUCCESS.md  ADW_INTEGRATION_COMPLETE.md  ADW_REAL_INTEGRATION_STATUS.md  AI_EXPANSION_MANIFEST.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTIONAL_SYSTEM_100PCT_COMPLETE.md  CONSTITUTIONAL_SYSTEM_CERTIFIED.md  COVERAGE_STATUS.md  DEPLOYMENT.md  Dockerfile.backup_track2  Dockerfile.dev.old  Dockerfile.production  Dockerfile.production.old  ESGT_KURAMOTO_STATUS_2025-10-15.md  ETHICAL_INTEGRATION_GUIDE.md  FASE1_STATUS.md  FASE_0_IMPLEMENTATION_SUMMARY.md  FASE_1_IMPLEMENTATION_SUMMARY.md  FASE_3_INTEGRATION_COMPLETE.md  FASE_5_INTEGRATION_COMPLETE.md  FINAL_AUDIT_REPORT.md  FINAL_COVERAGE_REPORT.md  INTEGRATION_AUDIT_REPORT.md  INTEGRATION_CERTIFICATION.md  LINTING_REPORT.md  MAXIMUS_100PCT_PROGRESS.md  MAXIMUS_3.0_COMPLETE.md  MAXIMUS_CERTIFICATION_2025-10-16.md  Makefile  PERFORMANCE.md  PHASE_4_INTEGRATION_COMPLETE.md  PHASE_5_INTEGRATION_COMPLETE.md  PROGRESS_REPORT_CORRECTIONS.md  PROXIMOS_PASSOS.md  (+73 more)
backend/services/maximus_core_service/.data/: personal_constitution.json
backend/services/maximus_core_service/_demonstration/: README.md  __init__.py  apply_maximus.py  chain_of_thought.py  demo_ethical_ai_complete.py  enqueue_test_decision.py  example_neuromodulation.py  example_neuromodulation_standalone.py  example_predictive_coding_usage.py  rag_system.py  reasoning_engine.py  tools_world_class.py  vector_db_client.py
backend/services/maximus_core_service/audit_results/: ALL_MODULES.txt  ALL_TESTS.txt  AUDIT_SUMMARY.md  FULL_COVERAGE_AUDIT.txt  MAXIMUS_ACTION_PLAN.md  MAXIMUS_RISK_MATRIX.md  MODULE_COUNTS_BY_DIR.txt  TEST_COUNTS.txt  coverage_full_audit.json  parse_coverage_audit.py
backend/services/maximus_core_service/demo/: README_DEMO.md  demo_maximus_complete.py  synthetic_dataset.py  synthetic_events.json  test_demo_execution.py
backend/services/maximus_core_service/docs/: CBR_ENGINE_PRODUCTION_GUIDE.md  CONSCIOUSNESS-SCIENTIFIC-COVERAGE-ANALYSIS.md  CONSCIOUSNESS_100PCT_WAR_ROOM.md  CONSCIOUSNESS_GAPS_ABSOLUTE_INVENTORY.md  CONSCIOUSNESS_INVENTORY.md  CONSCIOUSNESS_PRODUCTION_REPORT.md  CONSTITUTIONAL_VALIDATOR_INTEGRATION.md  COVERAGE_STATUS.html  DAY1_FINAL_SUMMARY.md  DAY2_FINAL_REPORT.md  DAY3_API_MIGRATION_SUMMARY.md  DAY4_COVERAGE_ANALYSIS.md  DAY4_TEST_MAPPING_COMPLETE.md  DAY4_TRUTH_DISCOVERY_FINAL.md  FASE2-COMPLETE-SCIENTIFIC-BUGS-FOUND.md  FASE2-EXECUTIVE-SUMMARY.md  FASE2-FINAL-KURAMOTO-FIXED.md  FASE2-PROGRESS-20251021.md  FASE2-STATUS-FINAL.md  FASE3-RK4-IMPLEMENTATION.md  FASE4_CONSCIOUSNESS_DIAGNOSTIC.md  FASE4_PROGRESS_DAY1.md  FASE4_TEST_REORGANIZATION.md  FASE_A_COMPLETE_STATUS.md  FASE_B_CURRENT_STATUS.md  FASE_B_P0_COMPLETE_STATUS.md  FASE_B_P8_P13_CONSCIOUSNESS_DEEP_DIVE.md  FASE_B_SESSION_SUMMARY.md  MASTER_COVERAGE_PLAN.md  PAPER-KURAMOTO-CONSCIOUSNESS.md  PLANO_95PCT_MASTER.md  SAFETY-COVERAGE-REPORT.md  SESSION_SUMMARY_DAY1.md  SISTEMA_COVERAGE_DEFINITIVO.md  TRACK1_STATUS.md  V3-INDUSTRIAL-SCALE-REPORT.md  VERDADE_COBERTURA_2025-10-22.md  coverage_history.json  fase2_coverage_report.py
backend/services/maximus_core_service/examples/: 01_ethical_decision_pipeline.py  02_autonomous_training_workflow.py  03_performance_optimization_pipeline.py  README.md
backend/services/maximus_core_service/k8s/: README.md  all-in-one.yaml  deployment.yaml
backend/services/maximus_core_service/migrations/: 001_create_social_patterns.sql
backend/services/maximus_core_service/tests/: README.md  __init__.py  conftest.py  test_api.py  test_batch_predictor.py  test_benchmark_suite.py  test_constitutional_compliance.py  test_constitutional_validator_100pct.py  test_coordinator.py  test_distributed_trainer.py  test_docker_stack.py  test_ethical_guardian_100pct.py  (+10 more)
backend/services/mcp_server/: COVERAGE_STATUS.md  PROGRESS_UPDATE.md  README.md  VALIDATION_REPORT.md  coverage.json  pyproject.toml  requirements.txt  validate_constitution.sh
backend/services/metacognitive_reflector/: .pylintrc  Dockerfile  README.md  pyproject.toml  verify_gemini.py
backend/services/prefrontal_cortex_service/: .env.example  Dockerfile.backup_track2_remaining  Dockerfile.old  Makefile  README.md  docker-compose.yml  docker-compose.yml.backup  logging.yaml  pyproject.toml  requirements.txt  requirements.txt.old
(+3627 files in other folders)
