[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metacognitive-reflector"
version = "3.0.0"
description = "MAXIMUS Metacognitive Reflector Service - Tribunal evaluation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
all = [
    "anthropic>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metacognitive_reflector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "broad-exception-caught",
    "unused-argument",
    "redefined-outer-name",
    "import-error",
    "protected-access",
    "import-outside-toplevel",
    "unused-variable",
    "unused-import",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20
max-attributes = 12

[tool.coverage.run]
omit = [
    "main.py",
    "main_v2.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
